@@ -412,6 +412,9 @@
       \item Fixed a lack of error checking in graphics event functions.
       (Found by Radford Neal; a different patch used here than the
       one in pqR.)
+      
+      \item \code{numericDeriv()} sometimes miscalculated the gradient.
+      (\PR{15849}, reported originally by Radford Neal)
     }
   }
 }
